--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -59,7 +59,12 @@
     <Compile Include="Game Controllers\KeyboardController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpriteFactories\EnemySpriteFactory.cs" />
     <Compile Include="SpriteFactories\MarioSpriteFactory.cs" />
+    <Compile Include="Sprites\Goomba\DeadGoombaSprite.cs" />
+    <Compile Include="Sprites\Goomba\GoombaSprite.cs" />
+    <Compile Include="Sprites\Koopa\DeadKoopaSprite.cs" />
+    <Compile Include="Sprites\Koopa\KoopaSprite.cs" />
     <Compile Include="Sprites\Mario\CrouchLeftBigMarioSprite.cs" />
     <Compile Include="Sprites\Mario\CrouchLeftFireMarioSprite.cs" />
     <Compile Include="Sprites\Mario\CrouchRightBigMarioSprite.cs" />
