--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -47,13 +47,6 @@
     <Compile Include="AbstractClasses\BlockSprite.cs" />
     <Compile Include="AbstractClasses\BlockState.cs" />
     <Compile Include="AbstractClasses\MarioSprite.cs" />
-    <Compile Include="Commnad\ExitCommand.cs" />
-    <Compile Include="Commnad\MarioCommand\JumpCommand.cs" />
-    <Compile Include="Commnad\MarioCommand\ChangeFireModeCommand.cs" />
-    <Compile Include="Commnad\MarioCommand\RunLeftCommand.cs" />
-    <Compile Include="Commnad\MarioCommand\CrouchCommand.cs" />
-    <Compile Include="Commnad\MarioCommand\RunRightCommand.cs" />
-    <Compile Include="Commnad\MarioCommand\PauseCommand.cs" />
     <Compile Include="Enums\MarioDirection.cs" />
     <Compile Include="Enums\MarioPosture.cs" />
     <Compile Include="Enums\MarioShape.cs" />
@@ -62,7 +55,6 @@
     <Compile Include="Interfaces\IBlockStateChanges.cs" />
     <Compile Include="Interfaces\IBlockState.cs" />
     <Compile Include="Game Controllers\InputState.cs" />
-    <Compile Include="Interfaces\IAction.cs" />
     <Compile Include="Interfaces\ICommand.cs" />
     <Compile Include="Interfaces\IController.cs" />
     <Compile Include="Interfaces\IMario.cs" />
@@ -70,7 +62,7 @@
     <Compile Include="Interfaces\IMarioPowerUp.cs" />
     <Compile Include="Interfaces\ISprite.cs" />
     <Compile Include="Game Controllers\KeyboardController.cs" />
-    <Compile Include="MarioAction.cs" />
+    <Compile Include="Commands\MarioCommand.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpriteFactories\BlockSpriteFactory.cs" />
