--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -47,6 +47,7 @@
     <Compile Include="BlockChange.cs" />
     <Compile Include="Enums\BlockTypes.cs" />
     <Compile Include="Interfaces\IBlockStateChange.cs" />
+    <Compile Include="Action.cs" />
     <Compile Include="Sprites\Blocks\HiddenBlockSprite.cs" />
     <Compile Include="States\BlockState.cs" />
     <Compile Include="AbstractClasses\MarioSprite.cs" />
@@ -72,7 +73,6 @@
     <Compile Include="Interfaces\IMarioPowerUp.cs" />
     <Compile Include="Interfaces\ISprite.cs" />
     <Compile Include="Game Controllers\KeyboardController.cs" />
-    <Compile Include="MarioAction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpriteFactories\BlockSpriteFactory.cs" />
