--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -44,6 +44,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AbstractGame.cs" />
     <Compile Include="BlockSprite.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Commands\QuitGameCommand.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="Game Controllers\GamepadController.cs" />
     <Compile Include="GameObjects\ItemGameObjects\FireFlower.cs" />
     <Compile Include="GameObjects\ItemGameObjects\RedMushroom.cs" />
+    <Compile Include="GameUtilities.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Game Controllers\KeyboardController.cs" />
     <Compile Include="Interfaces\IBlockStateMachine.cs" />
@@ -90,7 +92,6 @@
     <Compile Include="Interfaces\IController.cs" />
     <Compile Include="Interfaces\IMario.cs" />
     <Compile Include="Interfaces\IMarioState.cs" />
-    <Compile Include="Interfaces\IMarioPowerUp.cs" />
     <Compile Include="AbstractClasses\Sprite.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
