--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,4 @@ paket-files/
 __pycache__/
 *.pyc
 /Game/FlugelMario/Content/misc-3.png
+/Game/CodeReviews/Sprint 3/YanboDuCodeReviewSprint2 (2).txt
