--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -49,7 +49,15 @@
     <Compile Include="AbstractGame.cs" />
     <Compile Include="BlockSprite.cs" />
     <Compile Include="Camera\Camera.cs" />
-    <Compile Include="Commands\MarioCommand.cs" />
+    <Compile Include="Commands\ControllerCommand\LeftMarioCommand.cs" />
+    <Compile Include="Commands\ControllerCommand\MarioAccelerateCommand.cs" />
+    <Compile Include="Commands\ControllerCommand\ReleasedJumpMarioCommand.cs" />
+    <Compile Include="Commands\ControllerCommand\ReleasedRightMarioCommand.cs" />
+    <Compile Include="Commands\ControllerCommand\ReleasedLeftMarioCommand.cs" />
+    <Compile Include="Commands\ControllerCommand\ReleasedCrouchMarioCommand.cs" />
+    <Compile Include="Commands\ControllerCommand\ReleasedAccMarioCommand.cs" />
+    <Compile Include="Commands\ControllerCommand\MarioJumpCommand.cs" />
+    <Compile Include="Commands\ControllerCommand\MarioCrouchCommand.cs" />
     <Compile Include="Commands\QuitGameCommand.cs" />
     <Compile Include="Enums\BlockTypes.cs" />
     <Compile Include="Enums\CollisionDirection.cs" />
@@ -59,6 +67,7 @@
     <Compile Include="Game Controllers\GamepadController.cs" />
     <Compile Include="GameObjects\ItemGameObjects\FireFlower.cs" />
     <Compile Include="GameObjects\ItemGameObjects\RedMushroom.cs" />
+    <Compile Include="GameUtility\GameUtility.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Game Controllers\KeyboardController.cs" />
     <Compile Include="Interfaces\IBlock.cs" />
