--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -69,8 +69,11 @@
     <Compile Include="GameObjects\EnemyGameObjects\Goomba.cs" />
     <Compile Include="GameObjects\EnemyGameObjects\Koopa.cs" />
     <Compile Include="GameObjects\GameObjectType.cs" />
+    <Compile Include="GameObjects\ItemGameObjects\Coin.cs" />
     <Compile Include="GameObjects\ItemGameObjects\FireFlower.cs" />
-    <Compile Include="GameObjects\ItemGameObjects\RedMushroom.cs" />
+    <Compile Include="GameObjects\ItemGameObjects\Star.cs" />
+    <Compile Include="GameObjects\ItemGameObjects\SuperMushroom.cs" />
+    <Compile Include="GameObjects\ItemGameObjects\UpMushroom.cs" />
     <Compile Include="GameUtility\GameUtility.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Game Controllers\KeyboardController.cs" />
