Add star mario; revise controls

--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -44,19 +44,19 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AbstractClasses\MarioRunningStarSprite.cs" />
+    <Compile Include="Game Controllers\InputState.cs" />
+    <Compile Include="Sprites\Mario\MarioStarSprite.cs" />
     <Compile Include="AbstractClasses\MarioState.cs" />
     <Compile Include="AbstractClasses\SpriteSecondary.cs" />
     <Compile Include="AbstractGame.cs" />
-    <Compile Include="BlockSprite.cs" />
     <Compile Include="Camera\Camera.cs" />
     <Compile Include="Commands\ControllerCommand\RightMarioCommand.cs" />
     <Compile Include="Commands\ControllerCommand\LeftMarioCommand.cs" />
-    <Compile Include="Commands\ControllerCommand\MarioAccelerateCommand.cs" />
     <Compile Include="Commands\ControllerCommand\ReleasedJumpMarioCommand.cs" />
     <Compile Include="Commands\ControllerCommand\ReleasedRightMarioCommand.cs" />
     <Compile Include="Commands\ControllerCommand\ReleasedLeftMarioCommand.cs" />
     <Compile Include="Commands\ControllerCommand\ReleasedCrouchMarioCommand.cs" />
-    <Compile Include="Commands\ControllerCommand\ReleasedAccMarioCommand.cs" />
     <Compile Include="Commands\ControllerCommand\MarioJumpCommand.cs" />
     <Compile Include="Commands\ControllerCommand\MarioCrouchCommand.cs" />
     <Compile Include="Commands\QuitGameCommand.cs" />
@@ -74,7 +74,7 @@
     <Compile Include="GameObjects\ItemGameObjects\Star.cs" />
     <Compile Include="GameObjects\ItemGameObjects\SuperMushroom.cs" />
     <Compile Include="GameObjects\ItemGameObjects\UpMushroom.cs" />
-    <Compile Include="GameUtility\GameUtility.cs" />
+    <Compile Include="GameData\GameData.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Game Controllers\KeyboardController.cs" />
     <Compile Include="Interfaces\IBlock.cs" />
@@ -98,15 +98,26 @@
     <Compile Include="Sprites\Blocks\SmallBrickSprite.cs" />
     <Compile Include="Sprites\DisappearedSprite.cs" />
     <Compile Include="Sprites\Fireball\FireballSprite.cs" />
-    <Compile Include="States\BlockState.cs" />
+    <Compile Include="Sprites\Mario\CrouchLeftStarMarioSprite.cs" />
+    <Compile Include="Sprites\Mario\CrouchRightStarMarioSprite.cs" />
+    <Compile Include="Sprites\Mario\IdleLeftStarBigMarioSprite.cs" />
+    <Compile Include="Sprites\Mario\IdleLeftStarSmallMarioSprite.cs" />
+    <Compile Include="Sprites\Mario\IdleRightStarBigMarioSprite.cs" />
+    <Compile Include="Sprites\Mario\IdleRightStarSmallMarioSprite.cs" />
+    <Compile Include="Sprites\Mario\JumpLeftStarBigMarioSprite.cs" />
+    <Compile Include="Sprites\Mario\JumpLeftStarSmallMarioSprite.cs" />
+    <Compile Include="Sprites\Mario\JumpRightStarBigMarioSprite.cs" />
+    <Compile Include="Sprites\Mario\JumpRightStarSmallMarioSprite.cs" />
+    <Compile Include="Sprites\Mario\RunningLeftStarBigMarioSprite.cs" />
+    <Compile Include="Sprites\Mario\RunningLeftStarSmallMarioSprite.cs" />
+    <Compile Include="Sprites\Mario\RunningRightStarBigMarioSprite.cs" />
+    <Compile Include="Sprites\Mario\RunningRightStarSmallMarioSprite.cs" />
     <Compile Include="AbstractClasses\MarioSprite.cs" />
     <Compile Include="Enums\MarioDirection.cs" />
     <Compile Include="Enums\MarioPosture.cs" />
     <Compile Include="Enums\MarioShape.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="Game Controllers\InputState.cs" />
     <Compile Include="Interfaces\ICommand.cs" />
-    <Compile Include="Interfaces\IController.cs" />
     <Compile Include="Interfaces\IMario.cs" />
     <Compile Include="Interfaces\IMarioState.cs" />
     <Compile Include="AbstractClasses\Sprite.cs" />
@@ -160,27 +171,41 @@
     <Compile Include="States\EnemyStates\KoopaDeadState.cs" />
     <Compile Include="States\MarioState\CrouchLeftBigMarioState.cs" />
     <Compile Include="States\MarioState\CrouchLeftFireMarioState.cs" />
+    <Compile Include="States\MarioState\CrouchLeftStarMarioState.cs" />
     <Compile Include="States\MarioState\CrouchRightBigMarioState.cs" />
     <Compile Include="States\MarioState\CrouchRightFireMarioState.cs" />
+    <Compile Include="States\MarioState\CrouchRightStarMarioState.cs" />
     <Compile Include="States\MarioState\DeadMarioState.cs" />
     <Compile Include="States\MarioState\IdleLeftBigMarioState.cs" />
     <Compile Include="States\MarioState\IdleLeftFireMarioState.cs" />
     <Compile Include="States\MarioState\IdleLeftSmallMarioState.cs" />
+    <Compile Include="States\MarioState\IdleLeftStarBigMarioState.cs" />
+    <Compile Include="States\MarioState\IdleLeftStarSmallMarioState.cs" />
     <Compile Include="States\MarioState\IdleRightBigMarioState.cs" />
     <Compile Include="States\MarioState\IdleRightFireMarioState.cs" />
     <Compile Include="States\MarioState\IdleRightSmallMarioState.cs" />
+    <Compile Include="States\MarioState\IdleRightStarBigMarioStatecs.cs" />
+    <Compile Include="States\MarioState\IdleRightStarSmallMarioState.cs" />
     <Compile Include="States\MarioState\JumpLeftBigMarioState.cs" />
     <Compile Include="States\MarioState\JumpLeftFireMarioState.cs" />
     <Compile Include="States\MarioState\JumpLeftSmallMarioState.cs" />
+    <Compile Include="States\MarioState\JumpLeftStarBigMarioState.cs" />
+    <Compile Include="States\MarioState\JumpLeftStarSmallMarioState.cs" />
     <Compile Include="States\MarioState\JumpRightBigMarioState.cs" />
     <Compile Include="States\MarioState\JumpRightFireMarioState.cs" />
     <Compile Include="States\MarioState\JumpRightSmallMarioState.cs" />
+    <Compile Include="States\MarioState\JumpRightStarBigMarioState.cs" />
+    <Compile Include="States\MarioState\JumpRightStarSmallMarioState.cs" />
     <Compile Include="States\MarioState\RunningLeftBigMarioState.cs" />
     <Compile Include="States\MarioState\RunningLeftFireMarioState.cs" />
     <Compile Include="States\MarioState\RunningLeftSmallMarioState.cs" />
+    <Compile Include="States\MarioState\RunningLeftStarBigMarioState.cs" />
+    <Compile Include="States\MarioState\RunningLeftStarSmallMarioState.cs" />
     <Compile Include="States\MarioState\RunningRightBigMarioState.cs" />
     <Compile Include="States\MarioState\RunningRightFireMarioState.cs" />
     <Compile Include="States\MarioState\RunningRightSmallMarioState.cs" />
+    <Compile Include="States\MarioState\RunningRightStarBigMarioState.cs" />
+    <Compile Include="States\MarioState\RunningRightStarSmallMarioState.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
